--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "stream": "^0.0.3"
   }
 }
